Added nnl macro.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.7 2009/07/28 09:57:29 ith Exp $
+% $Id: ihmacros.sty,v 1.8 2009/07/29 20:12:37 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -51,6 +51,7 @@
 % 
 % non-gaussianity
 \newcommand{\fnl}{\ensuremath{f_{\mathrm{NL}}}}
+\newcommand{\nnl}{\ensuremath{n_{\mathrm{NL}}}}
 \newcommand{\tnl}{\tau_{\mathrm{NL}}}
 % 
 % Scientific notation
