Move around introductory text.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.18 2009/07/29 19:58:26 ith Exp $
+% $Id: dbi-intro.tex,v 1.19 2009/07/30 10:33:20 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.18 2009/07/29 19:58:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.19 2009/07/30 10:33:20 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -45,16 +45,16 @@ Mukhanov:2005bu,Kallosh:2007wm,brane18,
 brane19,brane20,brane21}. 
 (For recent reviews, see, e.g., \cite{tyereview,cline,McAllister:2007bg,Lorenz:2007ze,
 Bean:2007eh,bean}). 
-Of particular interest 
-is the Dirac-Born-Infeld (DBI) inflationary scenario \cite{brane6,brane11}. 
-This is based on the compactification of type IIB string theory on a 
-Calabi-Yau (CY) three-fold, where the form-field fluxes generate locally
-warped regions known as `throats'.  The propagation of a 
-${\rm D3}$-brane in such a region can drive inflation, where the inflaton 
-field is identified with the radial position of the brane 
-along the throat. Since this is an open string mode, the field 
-equation for the inflaton is determined by a DBI action.
+% Of particular interest 
+% is the Dirac-Born-Infeld (DBI) inflationary scenario \cite{brane6,brane11}.
+The Dirac-Born-Infeld (DBI) scenario 
+of the compactified type IIB theory is a well-motivated model \cite{brane6,brane11}, 
+in which inflation is driven by one or more ${\rm D}$-branes 
+propagating in a warped `throat' background 
 % 
+In the simplest version of the scenario, 
+the inflaton parametrizes the radial 
+position in the throat of a single ${\rm D3}$-brane. 
 The brane dynamics are determined by the DBI action in such a 
 way that the inflaton's kinetic energy is bounded from above by the warped 
 brane tension. The regime where this bound is nearly saturated is 
@@ -230,6 +230,15 @@ equilateral triangle becomes $-151 < \fnl < 253$.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \addtodo{ More introduction of type IIB theory}
+We will now concentrate on one particular non-canonical action. 
+The DBI scenario is based on the compactification of type IIB string theory on a 
+Calabi-Yau (CY) three-fold, where the form-field fluxes generate locally
+warped regions known as `throats'.  The propagation of a 
+${\rm D3}$-brane in such a region can drive inflation, where the inflaton 
+field is identified with the radial position of the brane 
+along the throat. Since this is an open string mode, the field 
+equation for the inflaton is determined by a DBI action.
+
 Flux compactification of type IIB string theory to four dimensions 
 results in a warped geometry, where the six-dimensional CY  
 manifold contains one or more throats (see \cite{grana,douglas} for reviews). 
