--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.21 2009/07/29 15:05:24 ith Exp $
+% $Id: thesis.tex,v 1.22 2009/07/30 11:18:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 % twoside,
@@ -25,21 +25,21 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.21 2009/07/29 15:05:24 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.22 2009/07/30 11:18:28 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Include list
 \includeonly{
-% abstract,
-% acknowledgements,
-% mainintro,
+abstract,
+acknowledgements,
+mainintro,
 dbi/dbi-intro,
 dbi/dbi,
-% dbi/multibrane,
-% numerical/numerical,
-% theend
+dbi/multibrane,
+numerical/numerical,
+theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
@@ -105,7 +105,7 @@ dbi/dbi,
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
 \bibliography{../central-store}
-\bibliographystyle{thesis}
+\bibliographystyle{../packages/utphys}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
