Added some intro text.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.19 2009/07/30 10:33:20 ith Exp $
+% $Id: dbi-intro.tex,v 1.20 2009/08/01 15:50:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.19 2009/07/30 10:33:20 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.20 2009/08/01 15:50:54 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -30,7 +30,7 @@ of the universe. It has now been successfully tested by observations,
 including the five year data from the Wilkinson Microwave Anisotropy 
 Probe (WMAP5) \cite{Komatsu:2008hk}. Despite this success, however, the high energy 
 physics that resulted in a phase of accelerated expansion is still 
-not well understood. String/M-theory unifies the fundamental interactions 
+not well understood. String/M-theory attempts to unify the fundamental interactions 
 including gravity and it is natural and important to 
 develop inflationary models within string theory and to confront them with 
 cosmological observations. 
@@ -97,13 +97,55 @@ signal in the density perturbations \cite{brane6,brane11,lidser3,chenetal}.
 
 
 In this chapter we introduce non-canonical inflation and DBI inflation.
-In Chapter \ref{ch:dbi} we derive upper and lower 
+In Chapter \ref{ch:dbi} we will derive upper and lower 
 limits on the amplitude of the tensor perturbations in Sections \ref{sec:upper-dbi} and  
 \ref{sec:lower-dbi} respectively.  
-We explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and discuss multi-brane 
+We will explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and discuss multi-brane 
 scenarios which permit observational tensor signals. 
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{Branes and extra dimensions}
+\label{sec:extradims}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+The discussion of the next three chapters takes place in the realm of superstring theory, 
+and we first introduce some of the concepts that we will need. The development of the theory
+is well documented and extensive and here we will focus only on those parts of the theory 
+that concern DBI inflation. 
+Standard background texts on string theory as a whole include ***.
 
+\subsection{Extra dimensions}
+One of the basics results of string theory is that the 3 spacial dimensions that we see
+around us are not the full extent of the manifold we live in. Instead we live in a ten or
+eleven dimensional spacetime and physical theories in 3+1 dimensions must compensate for the
+other 6 or 7 dimensions that are hidden from us. One of the challenges of string theory is how 
+to hide these extra dimensions in such a way as to recover standard physical results in the lower
+ones. The early work of Kaluza and Klein in dealing with higher dimensional theories [cite] has played
+a large role in the formation of consistent theories of extra dimensions in string theory.
+
+
+Suppose we wish to reduce a theory in $(D+1)$ dimensions to one in $D$ dimensions. 
+We will ``compactify'' the 
+(here single) extra dimension on a circle of finite radius $L$ and denote the coordinate on the circle as $z$. 
+Assume that in $(D+1)$ 
+dimensions we have a metric tensor $\hat{g}_{MN}(x,z)$ where $M$ and $N$ run over all $(D+1)$ dimensions and 
+x signifies the $D$ coordinates of the lower-dimensional spacetime. Hats denote quantities in the $(D+1)$ space-time.
+A Fourier decomposition of $\hat{g}_{MN}$ gives an infinite number of fields in $D$ dimensions:
+\begin{equation}
+ \hat{g}_{MN}(x,z) = \sum_n g_{MN}^{(n)}(x) e^{i\frac{nz}{L}}\,.
+\end{equation}
+The mode number $n$ is related to the mass of the resulting fields; modes with $n=0$ will be massless and those with
+$n \ne 0$ massive. This can be seen by considering the Klein-Gordon equation for a $(D+1)$ dimensional field $\hat{\varphi}$:
+
+
+
+
+\subsection{Dirichlet-branes}
+\subsection{Warped throats and Compactifications}
+\subsection{Four dimensional effective theory}
 % 
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
