Added long string theory intro.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.20 2009/08/01 15:50:54 ith Exp $
+% $Id: dbi-intro.tex,v 1.21 2009/08/01 16:03:06 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.20 2009/08/01 15:50:54 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.21 2009/08/01 16:03:06 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -111,11 +111,42 @@ scenarios which permit observational tensor signals.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-The discussion of the next three chapters takes place in the realm of superstring theory, 
-and we first introduce some of the concepts that we will need. The development of the theory
-is well documented and extensive and here we will focus only on those parts of the theory 
-that concern DBI inflation. 
-Standard background texts on string theory as a whole include ***.
+Unifcation of seemingly disparate theories has been a driving force in
+theoretical physis for more than 100 years. This effort culminated in the
+Standard Model (SM) of particle physics which unifies three of the four
+fundamental forces in a robust theoretical framework. Since the realisation of
+the SM a clear goal of theoretical phsyics has been the unification of the
+final force, gravity, into this framework.
+
+
+String theory is one of the most successful attempts to achieve this
+unification. According to this theory, the fundamental building blocks of the
+universe are vibrating bunles of energy. These ``strings'', and their analogues
+in other dimensions, constitute all matter and force particles in existence.
+The physics of their interactions dictates the physics of the SM which has been
+so successfully tested experimentally.
+
+This at least is the goal of the string theory project but the coimplex nature
+of the mathematical and physical structures involved means that no single
+well-defined theory can claim to have achieved this goal. Indeed many different
+string theories have been discovered. This might appear to be a significant
+set-back in the attempt to find a single unifying theory. 
+
+However, these different theories are linked in pairs by a process called
+``duality'', Physical descriptions in one theory can be translated into the
+dual description in the other. The dual version often exhibits properties that
+are useful for solving problems in the original setting.
+These dualities have demonstrated the existence of an underlying theory of
+which the individual string theories are only facets. 
+We will work in Type II B string theory which has proven to be the most
+fruitful for models of cosmological inflation.
+
+The most striking prediction of string theory is the existence of other
+dimensions beyond the four space-time dimensions that we
+experience. Recovering the physics of our familiar $3+1$ dimensional universe
+clearly requires that these extra dimensions be hidden in some way. How this is
+achieved is one of the signature features of any complete string theoretical
+description of the universe.
 
 \subsection{Extra dimensions}
 One of the basics results of string theory is that the 3 spacial dimensions that we see
